--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,6 +1,12 @@
+@use "../../styles/variables.scss" as *;  
+@use "../../styles/fonts.scss" as *;  
 
 nav {
   width: 100%;
-  background-color: forestgreen;
+  background-color: $primary-color;
   height: 100%;
+
+  img {
+    width: 5rem;
+  }
 }
