--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -4,9 +4,24 @@
 nav {
   width: 100%;
   background-color: $primary-color;
-  height: 100%;
+  padding:  10px 5%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  z-index: 10;
+  align-items: center;
+  justify-content: space-between;
 
-  img {
-    width: 5rem;
+  .logo {
+    width: 120px;
+  }
+
+  ul li {
+    font-family: "Heroes Legend";
+    display: inline-block;
+    margin: 5px 20px;
+    color: $secondary-color;
+    font-size: 16px;
   }
 }
