--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -5,11 +5,37 @@
   width: 100vw;
   min-height: 100vh;
   background: linear-gradient(to top,
-      $primary-dark 10%,
-      rgba(0,0,0, 0.1) 100%
+      $primary-dark 0%,
+      rgba(0,0,0, 0.2) 100%
     ),
     url("/images/634857.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  display: flex;
+  padding-top: 100px;
+  @include centered
+}
+
+.hero-text {
+  text-align: center;
+  max-width: 1000px;//
+
+  h1 {
+    font-size: 3rem;
+    font-family: "Heroes Legend";
+    line-height: 180%;
+    color: $secondary-color;
+    text-shadow: 4px 4px 15px rgba(($primary-dark), 1);
+  }
+
+  p {
+    margin: 10px auto 20px;
+    max-width: 800px;
+    font-family: "Bitter";
+    font-weight: normal;
+    line-height: 120%;
+    font-size: 1.5rem;
+    color: $secondary-light;
+  }
 }
