--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -15,23 +15,61 @@
     font-style: normal;
     font-display: swap;
 }
+//bitter
 
 @font-face {
     font-family: 'Bitter';
-    src: url('/fonts/Bitter-ThinItalic.woff2') format('woff2'),
-        url('/fonts/Bitter-ThinItalic.woff') format('woff');
-    font-weight: 100;
+    src: url('Bitter-Bold.woff2') format('woff2'),
+        url('Bitter-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Bitter';
+    src: url('Bitter-Regular.woff2') format('woff2'),
+        url('Bitter-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Bitter';
+    src: url('Bitter-Medium.woff2') format('woff2'),
+        url('Bitter-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Bitter';
+    src: url('Bitter-Italic.woff2') format('woff2'),
+        url('Bitter-Italic.woff') format('woff');
+    font-weight: normal;
     font-style: italic;
     font-display: swap;
 }
 
 @font-face {
     font-family: 'Bitter';
-    src: url('/fonts/Bitter-Thin.woff2') format('woff2'),
-        url('/fonts/Bitter-Thin.woff') format('woff');
-    font-weight: 100;
+    src: url('Bitter-Black.woff2') format('woff2'),
+        url('Bitter-Black.woff') format('woff');
+    font-weight: 900;
     font-style: normal;
     font-display: swap;
 }
+
+@font-face {
+    font-family: 'Bitter';
+    src: url('Bitter-ExtraBold.woff2') format('woff2'),
+        url('Bitter-ExtraBold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
 
 
