--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -7,7 +7,7 @@ nav {
   -webkit-backdrop-filter: blur(15px) saturate(180%);
   background-color: rgba($primary-color, 0.7);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);//glass effect
   padding:  10px 5%;
   position: fixed;
   top: 0;
@@ -25,7 +25,7 @@ nav {
     font-family: "Heroes Legend";
     display: inline-block;
     margin: 5px 20px;
-    color: $secondary-color;
-    font-size: 16px;
+    color: $secondary-light;
+    font-size: 1rem;
   }
 }
