--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -19,8 +19,8 @@
 
 @font-face {
     font-family: 'Bitter';
-    src: url('Bitter-Bold.woff2') format('woff2'),
-        url('Bitter-Bold.woff') format('woff');
+    src: url('/fonts/Bitter-Bold.woff2') format('woff2'),
+        url('/fonts/Bitter-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -28,8 +28,8 @@
 
 @font-face {
     font-family: 'Bitter';
-    src: url('Bitter-Regular.woff2') format('woff2'),
-        url('Bitter-Regular.woff') format('woff');
+    src: url('/fonts/Bitter-Regular.woff2') format('woff2'),
+        url('/fonts/Bitter-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -37,8 +37,8 @@
 
 @font-face {
     font-family: 'Bitter';
-    src: url('Bitter-Medium.woff2') format('woff2'),
-        url('Bitter-Medium.woff') format('woff');
+    src: url('/fonts/Bitter-Medium.woff2') format('woff2'),
+        url('/fonts/Bitter-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -46,8 +46,8 @@
 
 @font-face {
     font-family: 'Bitter';
-    src: url('Bitter-Italic.woff2') format('woff2'),
-        url('Bitter-Italic.woff') format('woff');
+    src: url('/fonts/Bitter-Italic.woff2') format('woff2'),
+        url('/fonts/Bitter-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -55,8 +55,8 @@
 
 @font-face {
     font-family: 'Bitter';
-    src: url('Bitter-Black.woff2') format('woff2'),
-        url('Bitter-Black.woff') format('woff');
+    src: url('/fonts/Bitter-Black.woff2') format('woff2'),
+        url('/fonts/Bitter-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -64,8 +64,8 @@
 
 @font-face {
     font-family: 'Bitter';
-    src: url('Bitter-ExtraBold.woff2') format('woff2'),
-        url('Bitter-ExtraBold.woff') format('woff');
+    src: url('/fonts/Bitter-ExtraBold.woff2') format('woff2'),
+        url('/fonts/Bitter-ExtraBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
