--- a/src/Components/Hero/Hero.scss
+++ b/src/Components/Hero/Hero.scss
@@ -1,5 +1,6 @@
 @use "../../styles/variables.scss" as *;
 @use "../../styles/fonts.scss" as *;
+@use "../../styles/defaults.scss" as *;
 
 .hero {
   width: 100vw;
