--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,5 +1,5 @@
-@use "../../styles/variables.scss" as *;  
-@use "../../styles/fonts.scss" as *;  
+@use "../../styles/variables.scss" as *;
+@use "../../styles/fonts.scss" as *;
 
 nav {
   width: 100%;
@@ -7,8 +7,8 @@ nav {
   -webkit-backdrop-filter: blur(15px) saturate(180%);
   background-color: rgba($primary-color, 0.7);
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);//glass effect
-  padding:  10px 5%;
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); //glass effect
+  padding: 10px 3%;
   position: fixed;
   top: 0;
   left: 0;
@@ -22,11 +22,19 @@ nav {
     cursor: pointer;
   }
 
-  ul li {
-    font-family: "Heroes Legend";
-    display: inline-block;
-    margin: 5px 20px;
-    color: $secondary-light;
-    font-size: 0.9rem;
+  ul {
+    display: flex;
+    align-items: center;
+
+    li {
+      font-family: "Heroes Legend";
+      /*     display: inline-block; */
+      margin: 5px 20px;
+      color: $secondary-light;
+      font-size: 0.9rem;
+      display: flex;
+      align-items: center;
+      gap: 3px;
+    }
   }
 }
