--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,8 @@
 }
 
 body {
-  background-color: $primary-dark;
+ background-color: $primary-dark;
+  background-image: url("/textures/asfalt-dark.webp");
   margin-bottom: 10000px;
   overflow-x: hidden;
 }
