--- a/src/Components/Services/Services.scss
+++ b/src/Components/Services/Services.scss
@@ -6,28 +6,59 @@
   margin: 3rem auto;
   width: 100%;
   display: flex;
- /*  flex-wrap: wrap; */
+  /*  flex-wrap: wrap; */
   align-items: start;
   justify-content: center;
-  gap: 20px;
+  gap: 30px;
 
   .service {
     flex: 1 1 500px;
     /* grow | shrink | basis */
     min-width: 150px;
     max-width: 500px;
+    flex-basis: 100px;
     display: inline-flex;
     flex-direction: column;
+    position: relative;
 
     img {
-      flex: 1;
-      margin: 10px 10px 30px 0px;
-      border-radius: $border-radius;
+     width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: $border-radius;
+    object-fit: cover;
     }
 
     .service-description {
       color: $secondary-light;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+
+      background-color: rgba($primary-color, 0.5);
+      backdrop-filter: blur(15px) saturate(180%);
+      -webkit-backdrop-filter: blur(15px) saturate(180%);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); //glass effect
+      border-radius: $border-radius;
+      @include centered;
+      flex-direction: column;
+
+      opacity: 0;
+      padding-top: 50%;
+      transition: 0.4s;
+
+      cursor: pointer;
+      h2 {
+        text-align: center;
+        margin-top: 0.5rem;
+      }
+    }
+    .service-description:hover {
+      opacity: 1;
+      padding-top: 0;
     }
   }
 }
-
