hover video player

--- a/src/index.scss
+++ b/src/index.scss
@@ -48,6 +48,13 @@ p {
   color: $secondary-light;
 }
 
+h1 {
+  font-size: 1.2rem;
+  font-family: "Heroes Legend";
+  line-height: 150%;
+  color: $secondary-color;
+}
+
 h2 {
   font-size: 1.3rem;
   font-family: "Bitter";
