--- a/src/Components/Services/Services.scss
+++ b/src/Components/Services/Services.scss
@@ -22,11 +22,11 @@
     position: relative;
 
     img {
-     width: 100%;
-    height: 100%;
-    display: block;
-    border-radius: $border-radius;
-    object-fit: cover;
+      width: 100%;
+      height: 100%;
+      display: block;
+      border-radius: $border-radius;
+      object-fit: cover;
     }
 
     .service-description {
@@ -51,14 +51,16 @@
       transition: 0.4s;
 
       cursor: pointer;
+
       h2 {
         text-align: center;
         margin-top: 0.5rem;
       }
-    }
-    .service-description:hover {
-      opacity: 1;
-      padding-top: 0;
+
+      &:hover {
+        opacity: 1;
+        padding-top: 0;
+      }
     }
   }
 }
