--- a/src/Components/AboutUs/AboutUs.scss
+++ b/src/Components/AboutUs/AboutUs.scss
@@ -3,28 +3,49 @@
 @use "../../styles/defaults.scss" as *;
 
 .about {
-  margin: 100px auto;
+  margin: 5rem auto;
+  background-color: rgba(0, 0, 0, 0.2);
+  clip-path: polygon(0 10%, 100% 0, 100% 90%, 0% 100%);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 90%;
+  width: 100%;
+  
+  padding: 5rem 10px;
 
-  .about-left {
+.about-left {
     flex-basis: 40%;
-
-    .about-video {
-      width: 100%;
-      border-radius: $border-radius;
-      overflow: hidden;
-      border: solid 1.6px $secondary-color;
-      box-shadow: none;
-      transition: box-shadow 0.4s ease;
-
-      &:hover {
-        box-shadow: 0 4px 8px rgba($secondary-color, 0.5);
-      }
+    position: relative;
+    
+    &:hover .play-icon {
+        opacity: 0;
     }
-  }
+    
+    .about-video {
+        width: 100%;
+/*         border-radius: $border-radius;
+        overflow: hidden;
+        border: solid 1.6px $secondary-color; */
+        box-shadow: none;
+        transition: box-shadow 0.4s ease;
+        
+        &:hover {
+            box-shadow: 0 4px 8px rgba($secondary-color, 0.5);
+        }
+    }
+    
+    .play-icon {
+        width: 60px;
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        z-index: 10;
+        transform: translate(50%, -50%);
+        opacity: 0.5;
+        transition: opacity 0.4s ease;
+        pointer-events: none;//important
+    }
+}
 
   .about-right {
     flex-basis: 56%;
