--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -3,11 +3,7 @@
 
 nav {
   width: 100%;
-  backdrop-filter: blur(15px) saturate(180%);
-  -webkit-backdrop-filter: blur(15px) saturate(180%);
-  background-color: rgba($primary-color, 0.7);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); //glass effect
+
   padding: 10px 3%;
   position: fixed;
   top: 0;
@@ -37,4 +33,13 @@ nav {
       gap: 3px;
     }
   }
+}
+
+.navbar {
+  background-color: rgba($primary-color, 0.7);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1); //glass effect
+  backdrop-filter: blur(15px) saturate(180%);
+  -webkit-backdrop-filter: blur(15px) saturate(180%);
+  transition: 0.5s;
 }
