--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 // Primary
 $primary-color: #0D6E45;
 $primary-light: #10B981;
-$primary-dark: #244C24;
+$primary-dark: #222b22;
 
 // Secondary  
 $secondary-color: #FFF100;
