--- a/src/Components/AboutUs/AboutUs.scss
+++ b/src/Components/AboutUs/AboutUs.scss
@@ -4,7 +4,7 @@
 
 .about {
   margin: 5rem auto;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba($primary-color, 0.2);
   clip-path: polygon(0 10%, 100% 0, 100% 90%, 0% 100%);
   display: flex;
   align-items: center;
