--- a/src/Components/Testimonials/Testimonials.scss
+++ b/src/Components/Testimonials/Testimonials.scss
@@ -7,7 +7,8 @@
   padding: 0 80px;
   position: relative;
 
-  .next-btn, .back-btn {
+  .next-btn,
+  .back-btn {
     position: absolute;
     top: 50%;
     right: 0;
@@ -21,7 +22,43 @@
   }
 
   .back-btn {
-    right: auto;
-    left: 0;
+    right: auto; ///
+    left: 0; ///
+  }
+
+  .slider {
+    overflow: hidden;
+
+    ul {
+      display: flex;
+      width: 200%;
+      overflow-x: hidden;
+      transition: 0.5s;
+
+      li {
+        width: 50%;
+        padding: 20px;
+
+        .slide {
+          box-shadow: 0 0 20px $primary-color;
+          border-radius: $border-radius;
+          padding: 40px;
+
+          .user-info {
+            display: flex;
+
+            img {
+              width: 100px;
+              border-radius: 50%;
+              margin-right: 10px;
+              margin-bottom: 15px;
+              border: 2px solid $primary-color;
+            }
+          }
+
+
+        }
+      }
+    }
   }
 }
