--- a/src/Components/Testimonials/Testimonials.scss
+++ b/src/Components/Testimonials/Testimonials.scss
@@ -34,6 +34,7 @@
       width: 200%;
       overflow-x: hidden;
       transition: 0.5s;
+      transform: translateX(15%);
 
       li {
         width: 50%;
