--- a/src/Components/Testimonials/Testimonials.scss
+++ b/src/Components/Testimonials/Testimonials.scss
@@ -34,7 +34,7 @@
       width: 200%;
       overflow-x: hidden;
       transition: 0.5s;
-      transform: translateX(15%);
+      transform: translateX(0);
 
       li {
         width: 50%;
