--- a/src/Components/AboutUs/AboutUs.scss
+++ b/src/Components/AboutUs/AboutUs.scss
@@ -23,14 +23,14 @@
     
     .about-video {
         width: 100%;
-/*         border-radius: $border-radius;
+        border-radius: $border-radius;
         overflow: hidden;
-        border: solid 1.6px $secondary-color; */
+        border: 2px solid $primary-dark;
         box-shadow: none;
         transition: box-shadow 0.4s ease;
         
         &:hover {
-            box-shadow: 0 4px 8px rgba($secondary-color, 0.5);
+            box-shadow: 0 0px 8px rgba($secondary-color, 0.5);
         }
     }
     
