--- a/src/Components/Testimonials/Testimonials.scss
+++ b/src/Components/Testimonials/Testimonials.scss
@@ -19,11 +19,17 @@
     cursor: pointer;
     background-color: $primary-color;
     border: 1px solid $secondary-light;
+    transition: 0.2s;
   }
 
   .back-btn {
     right: auto; ///
     left: 0; ///
+    opacity: 1;
+  }
+
+  .next-btn {
+    opacity: 1;
   }
 
   .slider {
