--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,7 @@
 body {
  background-color: $primary-dark;
   background-image: url("/textures/asfalt-dark.webp");
-  margin-bottom: 10000px;
+  margin-bottom: 2rem;
   overflow-x: hidden;
 }
 
