--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -1,14 +1,15 @@
 @use "../../styles/variables.scss" as *;
 @use "../../styles/fonts.scss" as *;
+@use "../../styles/defaults.scss" as *;
 
 nav {
   width: 100%;
 
-  padding: 10px 3%;
+  padding: 10px 2%;
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
+  display: inline-flex;
   z-index: 10;
   align-items: center;
   justify-content: space-between;
@@ -16,21 +17,63 @@ nav {
   .logo {
     width: 120px;
     cursor: pointer;
+
+    @include respond-max("tablet") {
+      width: 100px;
+    }
+  }
+
+  .menu-icon {
+    display: none;
+     @include respond-max("tablet") {
+      display: block;
+      z-index: 999;
+      width: 40px;
+      cursor: pointer;
+      border-radius: $border-radius;
+      border: solid 1.6px $secondary-color;
+      background-color: rgba($primary-color, 0.7);
+    }
   }
 
   ul {
-    display: flex;
+    display: inline-flex;
     align-items: center;
+
+
+  @include respond-max("tablet") {
+    position: fixed;
+    top: 0;
+    right: 0;////
+    bottom: 0;           
+    width: 250px;
+    height: 100vh; // full height
+    background-color: $primary-color;
+    padding-top: 70px;
+    transition: 0.5s;
+    z-index: 999;
+
+    display: flex;          
+    flex-direction: column; 
+    align-items: start;
+    padding-left: 20px;
+  }
 
     li {
       font-family: "Heroes Legend";
       /*     display: inline-block; */
-      margin: 5px 20px;
+      margin: 5px 12px;
       color: $secondary-light;
-      font-size: 0.9rem;
+      font-size: 0.7rem;
       display: flex;
       align-items: center;
       gap: 3px;
+      white-space: nowrap;
+
+      @include respond-max("tablet") {
+        margin: 25px 0px;
+
+      }
     }
   }
 }
@@ -42,4 +85,8 @@ nav {
   backdrop-filter: blur(15px) saturate(180%);
   -webkit-backdrop-filter: blur(15px) saturate(180%);
   transition: 0.5s;
+}
+
+.hide-menu {
+  right: -250px;
 }
