--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,9 @@ a {
   align-items: center;
   gap: 0.5rem;
   cursor: pointer;
+   @include respond-max("tablet") {
+    padding: 10px 5px; 
+  }
 }
 
 .dark-btn {
@@ -74,5 +77,12 @@ h3 {
 }
 
 .container {
-  margin: 0 15rem;
+  padding: 0 10%;
+
+   @include respond-max("tablet") {
+    padding: 0 5%;
+  }
+   @include respond-max("mobile") {
+    padding: 0 1%;
+  }
 }
