--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -32,7 +32,7 @@ nav {
       cursor: pointer;
       border-radius: $border-radius;
       border: solid 1.6px $secondary-color;
-      background-color: rgba($primary-color, 0.7);
+      background-color: rgba($primary-dark, 0.7);
     }
   }
 
