--- a/src/Components/Services/Services.scss
+++ b/src/Components/Services/Services.scss
@@ -7,9 +7,14 @@
   width: 100%;
   display: flex;
   /*  flex-wrap: wrap; */
-  align-items: start;
+  align-items: center;
   justify-content: center;
   gap: 30px;
+
+  @include respond-max("tablet") {
+    flex-direction: column;
+
+  }
 
   .service {
     flex: 1 1 500px;
