--- a/src/Components/Testimonials/Testimonials.scss
+++ b/src/Components/Testimonials/Testimonials.scss
@@ -6,6 +6,9 @@
   margin: 80px auto;
   padding: 0 80px;
   position: relative;
+     @include respond-max("tablet") {
+        padding: 0 40px;
+     }
 
   .next-btn,
   .back-btn {
@@ -20,12 +23,19 @@
     background-color: $primary-color;
     border: 1px solid $secondary-light;
     transition: 0.2s;
+           @include respond-max("tablet") {
+       right: -5%;
+     }
+    
   }
 
   .back-btn {
     right: auto; ///
     left: 0; ///
     opacity: 1;
+               @include respond-max("tablet") {
+      left: -5%;
+     }
   }
 
   .next-btn {
@@ -41,15 +51,24 @@
       overflow-x: hidden;
       transition: 0.5s;
       transform: translateX(0);
+       @include respond-max("tablet") {
+       width: 400%;
+     }
 
       li {
         width: 50%;
         padding: 20px;
-
+ @include respond-max("tablet") {
+        padding: 10px;
+        width: 100%
+     }
         .slide {
           box-shadow: 0 0 20px $primary-color;
           border-radius: $border-radius;
           padding: 40px;
+           @include respond-max("tablet") {
+        padding: 10px;
+     }
 
           .user-info {
             display: flex;
@@ -60,6 +79,10 @@
               margin-right: 10px;
               margin-bottom: 15px;
               border: 2px solid $primary-color;
+               @include respond-max("tablet") {
+width: 70px;
+height: 70px;
+     }
             }
           }
 
