--- a/src/Components/AboutUs/AboutUs.scss
+++ b/src/Components/AboutUs/AboutUs.scss
@@ -10,42 +10,52 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  
+
   padding: 5rem 10px;
 
-.about-left {
+  @include respond-max("tablet") {
+    flex-direction: column;
+    clip-path: polygon(0 5%, 100% 0, 100% 95%, 0% 100%);
+
+  }
+
+  .about-left {
     flex-basis: 40%;
     position: relative;
-    
+
     &:hover .play-icon {
-        opacity: 0;
+      opacity: 0;
     }
-    
+
+    @include respond-max("tablet") {
+      order: 2; ////
+    }
+
     .about-video {
-        width: 100%;
-        border-radius: $border-radius;
-        overflow: hidden;
-        border: 2px solid $primary-dark;
-        box-shadow: none;
-        transition: box-shadow 0.4s ease;
-        
-        &:hover {
-            box-shadow: 0 0px 8px rgba($secondary-color, 0.5);
-        }
+      width: 100%;
+      border-radius: $border-radius;
+      overflow: hidden;
+      border: 2px solid $primary-dark;
+      box-shadow: none;
+      transition: box-shadow 0.4s ease;
+
+      &:hover {
+        box-shadow: 0 0px 8px rgba($secondary-color, 0.5);
+      }
     }
-    
+
     .play-icon {
-        width: 60px;
-        position: absolute;
-        top: 50%;
-        right: 50%;
-        z-index: 10;
-        transform: translate(50%, -50%);
-        opacity: 0.5;
-        transition: opacity 0.4s ease;
-        pointer-events: none;//important
+      width: 60px;
+      position: absolute;
+      top: 50%;
+      right: 50%;
+      z-index: 10;
+      transform: translate(50%, -50%);
+      opacity: 0.5;
+      transition: opacity 0.4s ease;
+      pointer-events: none; //important
     }
-}
+  }
 
   .about-right {
     flex-basis: 56%;
