--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -8,6 +8,9 @@
   display: flex;
   align-content: center;
   justify-content: space-between;
+             @include respond-max("tablet") {
+      flex-direction: column;
+     }
 
   .contact-col {
     flex-basis: 48%;
