--- a/src/index.scss
+++ b/src/index.scss
@@ -80,9 +80,7 @@ h3 {
   padding: 0 10%;
 
    @include respond-max("tablet") {
-    padding: 0 5%;
+    padding: 0% 5%;
   }
-   @include respond-max("mobile") {
-    padding: 0 1%;
-  }
+
 }
